syntax = "proto3";

package rules.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

// Represents rules service
service RuleService {
  option (google.api.default_host) = "api.lasthearth.ru";

  // Returns random questions about rules
  rpc GetRandomQuestions(GetRandomQuestionsRequest) returns (GetRandomQuestionsResponse) {
    option (google.api.http) = {get: "/v1/rules/questions"};
  }

  // Creates a new question about rules
  rpc CreateQuestion(CreateQuestionRequest) returns (CreateQuestionResponse) {
    option (google.api.http) = {
      post: "/v1/rules/question"
      body: "*"
    };
  }
}

message GetRandomQuestionsRequest {
  // Count of questions to return, if not specified, returns 5 questions
  int32 count = 1;
}

message GetRandomQuestionsResponse {
  repeated Question questions = 1;

  // Represents a question about rules
  message Question {
    string id = 1;
    string question = 2;
  }
}

message CreateQuestionRequest {
  string question = 1;
}

message CreateQuestionResponse {}
